--- a/sample-telegraf.conf
+++ b/sample-telegraf.conf
@@ -23,7 +23,7 @@
   urls = ["http://10.168.0.69:8086"]
   token = "YjvGujgJCGT2O_JxMkzd59CYrQzdMJMM3YaTyjZG1xPzFnsvyzNIzX1A89nx-NO4xqDatl3fWw46jb2NuaY4bQ=="
   organization = "M9"
-  bucket = "app-servers"
+  bucket = "jenkins-pipeline"
   
 [[inputs.exec]]
   ## Commands array
